--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "plugins": ["security"],
+  "extends": ["next/core-web-vitals", "next", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-unused-vars": "error",
+    "no-undef": "error",
+    "no-console": "warn",
+    "eqeqeq": ["error", "always"],
+    "no-alert": "error",
+    "arrow-parens": ["error", "always"],
+    "security/detect-object-injection": "warn"
+  }
 }
