--- a/package.json
+++ b/package.json
@@ -6,18 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint-staged": "lint-staged -q -p false -v",
+    "eslint": "eslint --fix && eslint --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore . ",
+    "pre-commit": "npm run lint-staged",
+    "pre-push": "npm run build",
+    "prepare": "husky install",
+    "postinstall": "husky install"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/prompt": "^18.4.4",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-security": "^2.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.3.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,html}": [
+      "npm run format:fix",
+      "npm run eslint"
+    ],
+    "*.{css,json}": [
+      "npm run format:fix"
+    ]
   }
 }
