--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.21",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
