--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gsap": "^3.12.4",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
