--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.2",
-    "sharp": "^0.33.1"
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
