--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2"
