--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format:fix": "prettier --write --ignore-path .gitignore . "
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.1.0",
     "aos": "^2.3.4",
     "gsap": "^3.12.5",
     "next": "14.0.4",
