--- a/package.json
+++ b/package.json
@@ -5,24 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prestart": "next build",
     "start": "next start",
     "lint": "next lint",
     "format:fix": "prettier --write --ignore-path .gitignore . "
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "embla-carousel-autoplay": "^8.0.0-rc21",
+    "embla-carousel-react": "^8.0.0-rc21",
     "gsap": "^3.12.5",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.2"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-security": "^2.1.0",
     "postcss": "^8",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0"
   }
